Murphy System/archive/artifacts/outputs/workspace_output_1769373901_3393.txt
  File "/workspace/murphy_backend_complete.py", line 2632
    &quot;&quot;&quot;Process any user input with intent classification and command mapping.&quot;&quot;&quot;
    ^
SyntaxError: invalid syntax
